<resources>
    <string name="app_name">Brasil Mais Saúde</string>
    <string name="app_versao">2.0</string>
    <string name="action_settings">Settings</string>

    <string name="title">Brasil Mais Saúde</string>
    <string name="title_unidades_hospitalares">Unidades</string>
    <string name="label_search_unidade">nome unidade</string>
    <string name="label_comentario">Comentários</string>
    <string name="label_unidade">Unidade</string>
    <string name="label_media_avaliacao">Média das Avaliações</string>
    <string name="btn_novo_comentario">Adicionar Comentário</string>
    <string name="title_activity_login">Login</string>
    <string name="chck_cadastrado">Já sou cadastrado.</string>
    <string name="link_login"><u>&lt;&lt; Login</u></string>
    <string name="link_esqueci_senha"><u>Esqueci minha senha</u></string>


    <!--Strings relacionados a tela de Medicamento -->
    <string name="button_search_medicamentoPor">Pesquisar por:</string>
    <string name="button_search_medicamentoPor_confirmar">Ok</string>
    <string name="button_search_medicamentoPor_cancelar">Cancelar</string>
    <string-array name="search_array_medicamentoPor">
        <item>Buscar por Código de Barra</item>
        <item>Listar Todos</item>
    </string-array>
    <string name="button_search_medicamento">Pesquisar</string>
    <string name="label_search_medicamento">nome medicamento</string>
    <string name="title_activity_medicamento">Medicamentos</string>
    <string name="title_popup_preco_Abusivo">Informativo</string>
    <string name="body_popup_preco_Abusivo">Caso o consumidor perceba que, no momento da compra,
        o preço do medicamento está acima do ‘Preço Máximo ao Consumidor’,
        poderá encaminhar denúncia ao Anvis@tende, pelo telefone <b>0800-642-9782</b>
        ou e-mail da Secretaria Executiva da Cmed: <b>denuncia.cmed@anvisa.gov.br</b> </string>

    <string name="body_popup_search_medicamento_sem_registro">Não existem mais medicamentos a serem carregados!</string>

    <string name="title_sobre">Sobre</string>

    <!-- Strings related to login -->
    <string name="prompt_nome">Nome</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_email_cadastrado">Email cadastrado</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_password_confirm">Confirmar Senha</string>
    <string name="prompt_comentario">Escreva seu elogio,sugestão ou reclamação</string>
    <string name="btn_nova_conta">Criar Conta</string>
    <string name="btn_login">Login</string>
    <string name="btn_enviar_email">Enviar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_facebook">Login Facebook</string>
    <string name="error_invalido_email">Email inválido</string>
    <string name="error_nome_invalido">Nome inválido</string>
    <string name="error_invalido_password">A senha deve possuir no mínimo 6 caracteres</string>
    <string name="error_email_obrigatorio">O campo email é obrigatório</string>
    <string name="error_nome_obrigatorio">O campo nome é obrigatório</string>
    <string name="error_password_nao_confere">Confirmação da senha não confere</string>
    <string name="error_comentario_obrigatorio">Escreva seu comentário.</string>

    <!-- Strings related to Sobre -->
    <string name="label_aplicativo">- Aplicativo:</string>
    <string name="label_versao">- Versão:</string>
    <string name="label_descricao">- Descrição:</string>
    <string name="descricao_app">  O aplicativo Brasil Mais Saúde possui o cunho cívico e social, ao qual,  foi avaliado e
        classificado entre os 11 melhores apps do DESAFIO DE APLICATIVOS CÍVICOS: CONTROLE SOCIAL DIGITAL-2016 realizado pelo
        Tribunal de Contas da União (TCU). O aplicativo possui um leitor de código de barras que facilita verificar o
        preço máximo ao consumidor (PMC) dos medicamentos regulamentados no Brasil.
        \n O aplicativo é baseado em dados abertos disponibilizados nas bases governamentais públicas  e utiliza o sistema
        de crowdsourcing que é abastecido pelos usuários. As informações coletadas com a participação da sociedade serão usadas para gerar
        conteúdo e auxiliar os órgãos de controle externo.</string>

    <string name="label_desenvolvedores">- Desenvolvedores:</string>
    <string name="label_nomes_desenvolvedores">Jônatas Rodrigues / Jefferson Araujo</string>
    <string name="label_contato">- Contato:</string>
    <string name="label_email_contato">jsrodrigues@protonmail.com</string>

    <string name="title_activity_maps">Map</string>

</resources>
