<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_sobre"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    android:icon="@drawable/icone">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="3dp">

        <TableRow>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:text="@string/label_aplicativo"
                        android:padding="3dip"
                        android:fontFamily="sans-serif-condensed"/>
                    <TextView
                        android:text="@string/app_name"
                        android:gravity="left"
                        android:padding="3dip"
                        android:fontFamily="sans-serif-condensed"
                        android:textStyle="bold"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:text="@string/label_versao"
                        android:gravity="left"
                        android:padding="3dip"
                        android:fontFamily="sans-serif-condensed"/>
                    <TextView
                        android:text="@string/app_versao"
                        android:gravity="left"
                        android:padding="3dip"
                        android:fontFamily="sans-serif-condensed"
                        android:textStyle="bold"/>
                </TableRow>

            </TableLayout>
        </TableRow>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/label_descricao"
                    android:gravity="left"
                    android:padding="3dip"
                    android:fontFamily="sans-serif-condensed"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/descricao_app"
                    android:layout_width="wrap_content"
                    android:gravity="left"
                    android:padding="3dip"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-condensed"/>
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/label_desenvolvedores"
                    android:layout_width="wrap_content"
                    android:gravity="left"
                    android:padding="3dip"
                    android:fontFamily="sans-serif-condensed"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/label_nomes_desenvolvedores"
                    android:gravity="left"
                    android:padding="1dip"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-condensed"/>
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/label_contato"
                    android:layout_width="wrap_content"
                    android:gravity="left"
                    android:padding="3dip"
                    android:fontFamily="sans-serif-condensed"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/label_email_contato"
                    android:gravity="left"
                    android:padding="2dip"
                    android:fontFamily="sans-serif-condensed"
                    android:textStyle="bold"/>
            </TableRow>


        </TableLayout>

    </TableLayout>
</RelativeLayout>
