<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.civico.mais.saude.controle.LoginActivity">



    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/link_login"
            android:id="@+id/linkVoltaLogin"
            android:layout_alignBottom="@+id/space"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:textColor="@color/darkGreen"/>

        <Space android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_below="@+id/llSearchBarLayout" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/emailCadastrado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email_cadastrado"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout  android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="vertical">


            <Button
                android:id="@+id/btnEnviarEmail"
                style="?android:textAppearanceSmall"
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:text="@string/btn_enviar_email"
                android:textStyle="bold"
                android:layout_gravity="right"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/tvEnviando"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:layout_alignTop="@+id/progressBar"
                android:layout_toRightOf="@+id/progressBar"
                android:layout_toEndOf="@+id/progressBar" />

            <ProgressBar
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:layout_marginLeft="29dp"
                android:layout_marginStart="29dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>



    </LinearLayout>


</RelativeLayout>
